Configured Coupon listing in the Admin side
Minor modification to inserting coupon to DB

--- a/app/views/admin/coupon-add.hbs
+++ b/app/views/admin/coupon-add.hbs
@@ -55,6 +55,14 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <label for="Coupon Status">Activate Coupon:</label>
+        <select class="form-control" id="activeCoupon" name="activeCoupon" required>
+          <option value="true">Yes</option>
+          <option value="false">No</option>
+        </select>
+      </div>
+
       <br>
 
       
