--- a/app/views/admin/coupon-manage.hbs
+++ b/app/views/admin/coupon-manage.hbs
@@ -1,5 +1,8 @@
 <section style="margin-top: 20px; margin-bottom: 90px; padding-top: 5px; padding-bottom: 90px;">
 
+
+    {{!-- ============================== Active Coupons ============================== --}}
+
     <div class="container">
 
         <div class="row mt-4 justify-content-end">
@@ -10,15 +13,18 @@
 
         </div>
 
+        <h3 style="text-align: center; color:#0d6efd"><u>Active Coupons</u></h3>
+
         {{!-- ====================TABLE==================== --}}
 
-        <table id="coupon-table" class="table mt-4">
+        <table id="coupon-table-active" class="table table-striped mt-4">
 
             {{!-- ==========Table Header========== --}}
 
             <thead>
                 <tr>
                     <th scope="col">Coupon Code</th>
+                    <th scope="col">Status</th>
                     <th scope="col">DB Id</th>
                     <th scope="col">Description</th>
                     <th scope="col">Discount %</th>
@@ -34,43 +40,136 @@
 
             <tbody>
 
-                {{#each coupon}}
+                {{#each activeCoupons}}
 
-                <tr>
-                    
-                    <th scope="row">{{this.couponCode}}</th>
-                    <td>{{this._id}}</td>
-                    <td>{{this.description}}</td>
-                    <td>{{this.discountPercentage}}</td>
-                    <td>{{this.maxDiscountAmount}}</td>
-                    <td>{{this.minOrderValue}}</td>
-                    <td>{{this.validFor}}</td>
-                    <td>{{this.usageCount}}</td>
-
-                    <td>
+                    <tr>
                         
-                        <form action="/admin/edit-coupon" method="POST" class="col-md-2">
+                        <th scope="row">{{this.couponCode}}</th>
+                        <td>
+                            {{#if this.activeCoupon}}
+                                <i class="fas fa-check-circle text-success"></i> Active
+                            {{else}}
+                                <i class="fas fa-lock text-danger"></i> Blocked
+                            {{/if}}
+                        </td>
+                        <td>{{this._id}}</td>
+                        <td>{{this.couponDescription}}</td>
+                        <td>{{this.discountPercentage}}</td>
+                        <td>{{this.maxDiscountAmount}}</td>
+                        <td>{{this.minOrderValue}}</td>
+                        <td>{{this.validFor}}</td>
+                        <td>{{this.usageCount}}</td>
 
-                            <input type="hidden" name="couponId" value="{{this._id}}">
-
-                            <button class="btn btn-success" type="submit">EDIT</button>
-
-                        </form>
-
-                        <form action="/admin/deactivate-coupon" method="POST" class="col-md-2">
+                        <td>
                             
-                            <input type="hidden" name="couponId" value="{{this._id}}">
-                            
-                            <button class="btn btn-danger" onclick="return confirm('Are you sure that you want to deactivate {{this.name}} coupon?')" type="submit">DELETE</button>
+                            <form action="/admin/edit-coupon" method="POST" class="col-md-2">
 
-                        </form>
+                                <input type="hidden" name="couponId" value="{{this._id}}">
+
+                                <button class="btn btn-success" type="submit">EDIT</button>
+
+                            </form>
+
+                            <form action="/admin/deactivate-coupon" method="POST" class="col-md-2">
+                                
+                                <input type="hidden" name="couponId" value="{{this._id}}">
+                                
+                                <button class="btn btn-danger" onclick="return confirm('Are you sure that you want to deactivate {{this.name}} coupon?')" type="submit">DEACTIVATE</button>
+
+                            </form>
 
 
-                    </td>
-                    
+                        </td>
+                        
+                    </tr>
+
+                {{/each}}
+
+            </tbody>
+
+        </table>
+
+    </div>
+
+
+    <br>
+    <hr style="color:#0d6efd">
+    <br>
+
+
+    {{!-- ============================== Deactivated Coupons ============================== --}}
+
+    <div class="container">
+
+        <h3 style="text-align: center; color:#0d6efd"><u>Deactivated Coupons</u></h3>
+
+        {{!-- ====================TABLE==================== --}}
+
+        <table id="coupon-table-inactive" class="table mt-4">
+
+            {{!-- ==========Table Header========== --}}
+
+            <thead>
+                <tr>
+                    <th scope="col">Coupon Code</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">DB Id</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Discount %</th>
+                    <th scope="col">Maximum Discount</th>
+                    <th scope="col">Minimum Order Value</th>
+                    <th scope="col">Validity</th>
+                    <th scope="col">Usage Count</th>
+                    <th scope="col">Action</th>
                 </tr>
+            </thead>
 
-                
+            {{!-- ==========Table Body========== --}}
+
+            <tbody>
+
+                {{#each inActiveCoupons}}
+
+                    <tr>
+                        
+                        <th scope="row">{{this.couponCode}}</th>
+                        <td>
+                            {{#if this.activeCoupon}}
+                                <i class="fas fa-check-circle text-success"></i> Active
+                            {{else}}
+                                <i class="fas fa-lock text-danger"></i> In-active
+                            {{/if}}
+                        </td>
+                        <td>{{this._id}}</td>
+                        <td>{{this.couponDescription}}</td>
+                        <td>{{this.discountPercentage}}</td>
+                        <td>{{this.maxDiscountAmount}}</td>
+                        <td>{{this.minOrderValue}}</td>
+                        <td>{{this.validFor}}</td>
+                        <td>{{this.usageCount}}</td>
+
+                        <td>
+                            
+                            <form action="/admin/edit-coupon" method="POST" class="col-md-2">
+
+                                <input type="hidden" name="couponId" value="{{this._id}}">
+
+                                <button class="btn btn-success" type="submit">EDIT</button>
+
+                            </form>
+
+                            <form action="/admin/deactivate-coupon" method="POST" class="col-md-2">
+                                
+                                <input type="hidden" name="couponId" value="{{this._id}}">
+                                
+                                <button class="btn btn-danger" onclick="return confirm('Are you sure that you want to activate {{this.couponCode}} coupon?')" type="submit">Activate</button>
+
+                            </form>
+
+
+                        </td>
+                        
+                    </tr>
 
                 {{/each}}
 
@@ -85,6 +184,11 @@
 {{!-- Script For Enabling Data table in the above table --}}
 <script>
 
-    $('#coupon-table').DataTable();
+    $.(document).ready(function(){
+
+        $('#coupon-table-active').DataTable();
+        
+    })
+
 
 </script>
