--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -33,8 +33,7 @@
         <link href="/admin-resources/css/style.css" rel="stylesheet">
 
         {{!-- CSS for Data-Table --}}
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0-alpha3/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
 
     </head>
 
@@ -325,9 +324,9 @@
         <script src="/admin-resources/js/main.js"></script>
 
         {{!-- ============================== Javascript for Data Table ============================== --}}
-        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-        <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+        <script src="/admin-resources/js/dataTable-script.js"></script> {{!-- Placed this link here so that it'll be loaded after loading all jquery files required for Data tables--}}
 
     </body>
 
