Added option for deactivated coupons in left side bar

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -121,6 +121,7 @@
                             <div class="dropdown-menu bg-transparent border-0">
                                 <a href="/admin/manage-coupons" class="dropdown-item">Manage Coupons</a>
                                 <a href="/admin/add-coupon" class="dropdown-item">Add Coupon</a>
+                                <a href="/admin/inactive-coupons" class="dropdown-item">Deactivated Coupons</a>
                             </div>
                         </div>
 
