--- a/app/views/user/place-order.hbs
+++ b/app/views/user/place-order.hbs
@@ -407,7 +407,7 @@
                                                         <p class="mb-1"><b>Coupon Discounts:</b></p>
                                                     </div>
                                                     <div class="flex-sm-col col-auto">
-                                                        <p class="mb-1"><b>₹ 000</b></p>
+                                                        <p class="mb-1"><b>₹ {{couponDiscount}}</b></p>
                                                     </div>
                                                 </div>
                                                 <div class="row justify-content-between">
