Added offer management links in admin left-side panel

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -130,6 +130,8 @@
                             <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-comment-dollar me-2"></i>Offers</a>
                             <div class="dropdown-menu bg-transparent border-0">
                                 <a href="/admin/manage-offers" class="dropdown-item">Manage Offers</a>
+                                <a href="/admin/add-offer" class="dropdown-item">Add Offer</a>
+                                <a href="/admin/inactive-offers" class="dropdown-item">Inactive Offers</a>
                             </div>
                         </div>
 
