--- a/app/views/admin/offer-manage.hbs
+++ b/app/views/admin/offer-manage.hbs
@@ -1,49 +1,72 @@
-<div class="col-12">
-    <div class="bg-light rounded h-100 p-4">
-        <h6 class="mb-4">Responsive Table</h6>
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Country</th>
-                        <th scope="col">ZIP</th>
-                        <th scope="col">Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>jhon@email.com</td>
-                        <td>USA</td>
-                        <td>123</td>
-                        <td>Member</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mark@email.com</td>
-                        <td>UK</td>
-                        <td>456</td>
-                        <td>Member</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>jacob@email.com</td>
-                        <td>AU</td>
-                        <td>789</td>
-                        <td>Member</td>
-                    </tr>
-                </tbody>
-            </table>
+{{!-- ============================== Manage Active Offers ============================== --}}
+
+<div style="margin-top: 20px; margin-bottom: 90px; padding-top: 5px; padding-bottom: 90px;">
+
+    <div class="container">
+
+        <div class="col-12">
+
+            <div class="bg-light rounded h-100 p-4">
+
+                <h6 class="mb-4 text-center">Manage Offers</h6>
+
+                {{!-- ================================== Active Offers Data Table ================================== --}}
+
+                <div class="table-responsive">
+
+                    <table class="table">
+
+                        {{!-- Table Head --}}
+                        <thead>
+
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Status</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Discount %</th>
+                                <th scope="col">Max Discount</th>
+                                <th scope="col">Min Order Value</th>
+                                <th scope="col">Expires On</th>
+                                <th scope="col">Usage Count</th>
+                            </tr>
+
+                        </thead>
+
+                        {{!-- Table Body --}}
+                        <tbody>
+
+                            {{#each activeOfferData}}
+
+                                <tr>
+                                    <td>{{this.offerName}}</td>
+                                    <td>
+                                        {{#if this.activeOffer}}
+                                            <i class="fas fa-check-circle text-success"></i> Active
+                                        {{else}}
+                                            <i class="fas fa-lock text-danger"></i> Inactive
+                                        {{/if}}
+                                    </td>
+                                    <td>{{this.offerDescription}}</td>
+                                    <td>{{this.discountPercentage}}</td>
+                                    <td>{{this.maxDiscountAmount}}</td>
+                                    <td>{{this.minOrderValue}}</td>
+                                    <td>{{this.expiryDate}}</td>
+                                    <td>{{this.usageCount}}</td>
+                                </tr>
+
+                            {{/each}}
+
+                        </tbody>
+
+                    </table>
+
+                </div>
+
+
+            </div>
+            
         </div>
+
     </div>
+
 </div>
