--- a/app/views/admin/view-product-categories.hbs
+++ b/app/views/admin/view-product-categories.hbs
@@ -20,10 +20,11 @@
                 <tr>
                     <th scope="col">Category Id</th>
                     <th scope="col">Category</th>
-                    <th scope="col">Description</th>
                     <th scope="col">Created By</th>
                     <th scope="col">Created On</th>
                     <th scope="col">Image</th>
+                    <th scope="col">Offers</th>
+                    <th scope="col">Manage Offer</th>
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
@@ -37,10 +38,21 @@
                 <tr>
                     <th scope="row">{{this.categoryId}}</th>
                     <td>{{this.name}}</td>
-                    <td>{{this.description}}</td>
                     <th scope="row">{{this.creatorDetails.name}}</th>
                     <th scope="row">{{this.createdOn}}</th>
                     <td><img style="width: 50px; height: 50px" src="/product-category-images/{{this._id}}.jpg" alt="{{this.name}}"></td>
+                    <td>
+                    
+                        <button class="btn btn-sm btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#set-category-offer-{{this._id}}">Add</button>
+                    
+                        <form action="/admin/remove-category-offer" method="post">
+                            <input type="hidden" name="productId" value="{{this._id}}">
+                            <button type="submit" class="btn btn-danger"
+                                onclick="return confirm('Are you sure that you want to remove category offer ?')">Remove</button>
+                        </form>
+                    
+                    </td>
                     <td>
                         
                         <form action="/admin/edit-product-category/{{this._id}}" method="GET" class="col-md-2">
@@ -52,6 +64,43 @@
 
                     </td>
                 </tr>
+
+                {{!-- ========================== Modal for Adding category offer ========================== --}}
+
+                <div class="modal fade" id="set-category-offer-{{this._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+
+                            <div class="modal-header">
+
+                                <h5 class="modal-title" id="exampleModalCenterTitle">Set Category Offer for {{this.name}}</h5>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+
+                            </div>
+
+                            <form action="/admin/set-category-offer" method="POST">
+
+                                <div class="modal-body">
+                                    <label for="offer">Offer Percentage:</label>
+                                    <input type="number" id="categoryOfferPercentage" name="categoryOfferPercentage" required min="1" max="99">
+
+                                    <input type="hidden" class="form-control" id="categoryId" name="categoryId" value="{{this._id}}" required>
+
+                                    <br><br>
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-primary">Save changes</button>
+                                </div>
+
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
 
                 {{/each}}
 
