--- a/app/views/admin/view-products.hbs
+++ b/app/views/admin/view-products.hbs
@@ -47,7 +47,7 @@
                         <td>{{this.productOffer}} %</td>
                         <td>
                             
-                            <button class="btn btn-sm btn-primary" data-bs-toggle = "modal" data-bs-target="#set-product-offer-{{this._id}}">Add</button>
+                            <button class="btn btn-primary mb-1" data-bs-toggle = "modal" data-bs-target="#set-product-offer-{{this._id}}">Add</button>
 
                             <form action="/admin/remove-product-offer" method="post">
                                 <input type="hidden" name="productId" value="{{this._id}}">
@@ -56,7 +56,7 @@
 
                         </td>
                         <td>
-                            <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
+                            <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary mb-1">Edit</a>
                             <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you sure that you want to delete {{this.name}} ?')">DELETE</a>
                         </td>
                     </tr>
