Minor-coding modification

--- a/app/views/admin/view-product-categories.hbs
+++ b/app/views/admin/view-product-categories.hbs
@@ -18,7 +18,7 @@
 
             <thead>
                 <tr>
-                    <th scope="col">Category Id</th>
+                    <td scope="col">Category Id</td>
                     <th scope="col">Category</th>
                     <th scope="col">Created By</th>
                     <th scope="col">Created On</th>
